# jdatetime

./: .gitignore  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
jdatetime/: __init__.py  pyproject.toml
tests/: __init__.py  test_jdate.py  test_jdatetime.py
